# simplefin_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/memory/: MEMORY.md  feedback_surface_errors.md
.claude/skills/simplefin/: SKILL.md
simplefin/: Cargo.toml
simplefin-cli/: Cargo.toml
simplefin-cli/src/: format.rs  main.rs
simplefin/src/: analysis.rs  anomaly.rs  constants.rs  credentials.rs  datetime_utils.rs  error.rs  lib.rs  recurring.rs  spending.rs  trends.rs
simplefin/src/clients/: access_client.rs  bridge_client.rs  mod.rs
simplefin/src/models/: account.rs  account_set.rs  bridge_info.rs  mod.rs  organization.rs  serde_helpers.rs  transaction.rs
simplefin/src/storage/: json_storage.rs  mod.rs  traits.rs
simplefin/tests/: analysis_test.rs  anomaly_test.rs  credentials_test.rs  models_test.rs  schema_test.rs  spending_test.rs  storage_test.rs
specs/: futures.md  requirements.md  vision.md
tests/: models_test.rs  output_test.rs  pipeline_test.rs
