[package]
name = "simplefin-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for the SimpleFIN API bridge"
repository = "https://github.com/csells/simplefin_rust"

[[bin]]
name = "simplefin"
path = "src/main.rs"

[dependencies]
simplefin = { path = "../simplefin" }
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync", features = ["tls"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
schemars = "0.8"
